--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_margin="5dp"
+        android:paddingStart="5dp"
         android:background="@drawable/corner_redius_background"
         app:layout_constraintCircleRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,31 +20,31 @@
 
 
         <ImageView
+            android:id="@+id/item_image_cart"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_margin="10dp"
+            android:padding="12dp"
             android:src="@drawable/coke" />
 
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/item_name_cart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:text="Coke"
                 android:textSize="20sp"/>
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/item_price_cart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:text="Rs 40"
                 android:textSize="20sp"/>
         </LinearLayout>
@@ -52,15 +54,15 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/button"
+                android:id="@+id/remove_item_from_cart"
                 android:layout_width="35dp"
-                android:paddingLeft="5dp"
-                app:cornerRadius="25dp"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:layout_marginRight="20dp"
+                app:cornerRadius="25dp"
                 app:icon="@drawable/ic_clear_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
