--- a/grabbit/app/src/main/res/layout/fragment_cart.xml
+++ b/grabbit/app/src/main/res/layout/fragment_cart.xml
@@ -6,86 +6,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".bnhome.bncart.CartFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/toolbar_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:background="@color/colorOrange">
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Cart"
-            android:textColor="@color/white"
-            android:textSize="20sp"/>
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/toolbar_home"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="10dp"-->
+<!--        android:background="@color/colorOrange">-->
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Cart"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="20sp"/>-->
 
-    </com.google.android.material.appbar.AppBarLayout>
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        >
-
+        android:layout_height="match_parent">
         <LinearLayout
             android:id="@+id/lin_lay_cart_1"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/cart_item_listrv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp" />
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="0dp"
-                android:orientation="vertical">
-
+            android:layout_marginTop="5dp"
+            >
+                <TextView
+                    android:id="@+id/txtcart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Cart"
+                    android:layout_marginStart="15dp"
+                    android:textColor="#000000"
+                    android:textSize="25sp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
-                    android:layout_marginStart="15dp"
                     android:layout_marginTop="6dp"
-                    android:text="Rs 500"
+                    android:layout_marginStart="15dp"
+                    android:text="5 items"
                     android:textColor="#000000"
-                    android:textSize="17dp" />
-
-            </LinearLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCheckout"
-                android:layout_width="wrap_content"
+                    android:textSize="17dp"
+                    />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/cart_item_listrv"
+                android:background="#BEBEBE"
+                android:padding="5dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="210dp"
-                android:layout_marginEnd="15dp"
-                android:text="@string/checkout"
-                app:cornerRadius="25dp"
-                tools:layout_editor_absoluteX="307dp"
-                tools:layout_editor_absoluteY="560dp"></com.google.android.material.button.MaterialButton>
+                />
+        </LinearLayout>
 
-        </RelativeLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnCheckout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/checkout"
+            app:cornerRadius="25dp"
+            app:layout_constraintStart_toStartOf="parent">
 
-
+        </com.google.android.material.button.MaterialButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
