--- a/grabbit/app/src/main/res/layout/fragment_account.xml
+++ b/grabbit/app/src/main/res/layout/fragment_account.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:id="@+id/lin_lay_acc_1"
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="250dp"
             android:background="@color/colorOrange"
             android:paddingTop="30dp"
             android:layout_alignParentStart="true"
@@ -25,8 +25,8 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/coke">
+                android:layout_height="180dp"
+                android:src="@drawable/userimg">
 
             </ImageView>
 
@@ -36,7 +36,6 @@
                 android:text="Mark Evans"
                 android:textAlignment="center"
                 android:textColor="#fff"
-                android:textStyle="bold"
                 android:textSize="22sp"/>
         </LinearLayout>
 
@@ -46,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/lin_lay_acc_1"
             android:orientation="vertical"
-            android:layout_margin="30dp">
+            android:layout_margin="25dp">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -54,16 +53,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:src="@drawable/ic_perm_phone_msg_black_24dp"/>
                 <TextView
-                    android:textStyle="bold"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="20dp"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:text="Contact Us"/>
             </LinearLayout>
             <LinearLayout
@@ -73,17 +71,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:src="@drawable/ic_info_black_24dp"/>
                 <TextView
-                    android:textStyle="bold"
-
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="20dp"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:text="About Us"/>
 
             </LinearLayout>
@@ -94,17 +90,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:src="@drawable/ic_settings_black_24dp"/>
                 <TextView
-                    android:textStyle="bold"
 
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="20dp"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:text="Setting"/>
 
             </LinearLayout>
