--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -18,6 +18,7 @@
 
 
         <ImageView
+            android:id="@+id/img_product"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="10dp"
@@ -29,7 +30,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/txt_product_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
@@ -38,7 +39,7 @@
                 android:textSize="20sp"/>
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/txt_product_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
@@ -52,7 +53,7 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/button"
+                android:id="@+id/btn_remove"
                 android:layout_width="35dp"
                 android:paddingLeft="5dp"
                 app:cornerRadius="25dp"
