--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:layout_margin="10dp"
         android:id="@+id/CartItemListId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,11 +22,12 @@
             android:id="@+id/img_product"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_margin="10dp"
+            android:padding="12dp"
+            android:layout_marginStart="15dp"
             android:src="@drawable/coke" />
 
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -33,8 +35,8 @@
                 android:id="@+id/txt_product_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
                 android:text="Coke"
                 android:textSize="20sp"/>
 
@@ -42,8 +44,8 @@
                 android:id="@+id/txt_product_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
                 android:text="Rs 40"
                 android:textSize="20sp"/>
         </LinearLayout>
@@ -55,13 +57,13 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_remove"
                 android:layout_width="35dp"
+                android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
                 app:cornerRadius="25dp"
-                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 app:icon="@drawable/ic_clear_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
