--- a/grabbit/app/src/main/res/layout/fragment_cart.xml
+++ b/grabbit/app/src/main/res/layout/fragment_cart.xml
@@ -24,39 +24,34 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
+
+        <ScrollView
             android:id="@+id/lin_lay_cart_1"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="5dp"
-            >
-                <TextView
-                    android:id="@+id/txtcart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="My Cart"
-                    android:layout_marginStart="15dp"
-                    android:textColor="#000000"
-                    android:textSize="25sp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginStart="15dp"
-                    android:text="5 items"
-                    android:textColor="#000000"
-                    android:textSize="17dp"
-                    />
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/btnCheckout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="6dp"
+                android:text="5 items"
+                android:textColor="#000000"
+                android:textSize="17dp" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cart_item_listrv"
-                android:background="#BEBEBE"
-                android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
-        </LinearLayout>
+                android:background="#BEBEBE"
+                android:padding="5dp" />
+        </ScrollView>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCheckout"
