--- a/grabbit/app/src/main/res/layout/activity_information.xml
+++ b/grabbit/app/src/main/res/layout/activity_information.xml
@@ -53,6 +53,7 @@
                 android:textSize="23sp"
                 />
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_scan_qr_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
