--- a/grabbit/app/src/main/res/layout/category_view.xml
+++ b/grabbit/app/src/main/res/layout/category_view.xml
@@ -5,6 +5,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="15dp"
     app:cardBackgroundColor="@color/colorOrange"
     android:background="@drawable/selector_xml_btn_orange"
